--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,6 +1,15 @@
 \section{Introduction}
-A reduction proof reduces the security of a cryptographic construction (in a model) to
-the security of the underlying building blocks (in a model). Designing cryptographic constructions, reductions, proving their soundness and verifying the correctness of one's proofs is, at times, a difficult endeavour, because constructions can be complex (e.g., TLS 1.3~\cite{X}), reductions can be complex (even for simple constructions such as the Goldreich-Levin hardcore bit~\cite{X}), proving the soundness of a reduction can be intricate and subtle even for simple reductions (e.g., the random embedding reduction in Yao's weak-to-strong one-way function amplification), and verifying the overall proof is typically difficult because we tend to use significant amount of conceptual high-level reasoning which one needs to reproduce when verifying the proof (e.g., understanding why/how the orginal Lindell-Pinkas reduction proof for Yao's garbling scheme~\cite{X} uses an additionally provided encryption oracle of the underlying security notion for symmetric encryption and why this suffices to conduct a hybrid argument over the circuit in topological order).
+The paradigm of \emph{reduction-based security}---sometimes also referred to as \emph{provable security}---is the state-of-the-art method of understanding and confirming the security of cryptographic constructions. Concretely, a reduction proof reduces the security of a cryptographic construction (in a model) to the security of the underlying building blocks (in a model). While writing reductions, arguing about their soundness and verifying one's own (or someone else's) proof is relatively easy in some contexts, it easily gets out of hand when constructions become complex. Important methods for taming the complexity of security proofs and increasing their precision are \emph{game-hopping}~\cite{X}, \emph{code-based} arguments~\cite{X} as well as composition methodologies such as Universal Composability~\cite{X}, Constructive Cryptography~\cite{X} and ... .
+
+However, studying protocols such as Transport Layer Security (TLS) \emph{as they are} (without simplifications and abstractions) remains nevertheless difficult, since the TLS 1.3 description alone consists of over 100 pages which makes the protocol unwieldy for analysis. Therefore, TLS 1.3 as it is has only been studied via formal methods. Concretely, the celebrated miTLS work ...~\cite{X} ... something about code-base.... However, $F^*$-based verification alone does not enable obtaining reductions to the underlying assumptions and was thus complemented with paper-based reductions of the cryptographic core.
+
+For TLS 1.3, the cryptographic core or \emph{key schedule} has recently been analyzed (without simplifications) by Brzuska, Delignat-Lavaud, Egger, Fournet, Kohbrok, and Kohlweiss (BDEFKK~\cite{X}, providing an interface which aligns with the $F^\star$-based analysis of ... . Towards this goal, Brzuska, Delignat-Lavaud, Fournet, Kohbrok, and Kohlweiss (BDFKK~\cite{X}) had previously developed \emph{state-separating proofs (SSP)}
+
+Issue: I actually don't know what miTLS proves and whether it is enough to say that it does what we want or not. I should probably study the interface --- and maybe, here, it is worth to talk to Konrad, Hakon, Antoine and Markulf...
+
+=== OLD ===
+
+Designing cryptographic constructions, reductions, proving their soundness and verifying the correctness of one's proofs is, at times, a difficult endeavour, because constructions can be complex (e.g., TLS 1.3~\cite{X}), reductions can be complex (even for simple constructions such as the Goldreich-Levin hardcore bit~\cite{X}), proving the soundness of a reduction can be intricate and subtle even for simple reductions (e.g., the random embedding reduction in Yao's weak-to-strong one-way function amplification), and verifying the overall proof is typically difficult because we tend to use significant amount of conceptual high-level reasoning which one needs to reproduce when verifying the proof (e.g., understanding why/how the orginal Lindell-Pinkas reduction proof for Yao's garbling scheme~\cite{X} uses an additionally provided encryption oracle of the underlying security notion for symmetric encryption and why this suffices to conduct a hybrid argument over the circuit in topological order).
 
 \subsection{Supporting protocol and proof development and verification}
 We categorize research on supporting these different stages of designing a protocol and developing and verifying the associated reduction proofs into the following four (overlapping) categories (1) attack-finding, (2) composition, (3) proof-writing styles and (4) formal verification and now briefly review each.
