--- a/paper/main.tex
+++ b/paper/main.tex
@@ -132,7 +132,7 @@ def}}}{=}}}
 \renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
 \renewcommand\pcthen{:}
 
-\title{SSPVerif}
+\title{SSBee}
 %\author{}\institute{}
 \author{Chris Brzuska\inst{1}, Christoph Egger\inst{2}, Jan Winkelmann\inst{3}}
 \institute{
@@ -161,6 +161,8 @@ Very concrete.
 %\tableofcontents
 
 \input{introduction}
+\input{ssp}
+
 
 %\input{technical-overview}
 
