make bibtex happy

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -173,7 +173,7 @@ Very concrete.
 
 %{\footnotesize
 %\bibliography{cryptobib/abbrev3,cryptobib/crypto,misc}{}
-\bibliography{abbrev3,cryptobib/crypto,misc}{}
+\bibliography{cryptobib/abbrev3,cryptobib/crypto,misc}{}
 \bibliographystyle{abbrv}
 %}
 %\clearpage
