SSP section, SSB section

--- a/paper/app-ssp.tex
+++ b/paper/app-ssp.tex
@@ -11,7 +11,7 @@ and then still runs the MAC verification algorithm to decide whether to
 return $0$ or $1$.}. The ideal behaviour of the $\O{VERIFY}$ oracle nicely 
 reflects what a game-hop reducing to (strong) unforgeability typically
 aims to achieve and has a certain flavour of the ideal functionality approach
-of universal composability (UC)~\cite{X}. In general, search games can be
+of universal composability (UC)~\cite{FOCS:Canetti01}. In general, search games can be
 encoded into distinguishing notions by adding a $\O{WIN}$ oracle that encodes the winning condition of the search game in the real game whereas $\O{WIN}$ never
 returns $1$ in the ideal game. In conclusion, the limitation to
 distinguishing games is without loss of generality due to this technical
