--- a/paper/main.tex
+++ b/paper/main.tex
@@ -162,6 +162,7 @@ Very concrete.
 
 \input{introduction}
 \input{ssp}
+\input{ssbee}
 
 
 %\input{technical-overview}
@@ -175,7 +176,7 @@ Very concrete.
 
 %{\footnotesize
 %\bibliography{cryptobib/abbrev3,cryptobib/crypto,misc}{}
-\bibliography{abbrev3,cryptobib/crypto,misc}{}
+\bibliography{abbrev3,cryptobib/crypto,local}{}
 \bibliographystyle{abbrv}
 %}
 %\clearpage
