--- a/paper/ssp.tex
+++ b/paper/ssp.tex
@@ -1,4 +1,4 @@
-\section{State-Separating Proofs}
+\section{State-Separating Proofs}\label{sec:ssp}
 In this section, we review state-separating proofs (SSPs)
 as introduced by Brzuska, Delignat-Lavaud, Fournet, Kohbrok and
 Kohlweiss (BDEFKK~\cite{X}), integrating refinements and
@@ -60,4 +60,9 @@ $\O{ENC}$ oracle of $\M{ENCRYPT}^b$.
 {\color{blue}Chris: Can compositions be parametrized with a bit $b$ and
 use different packages based on which value $b$ has?}
 
+\subsection{Proofs}
+standard pattern and how we use this for SSBee.
 
+\paragraph{SSBee.}
+
+\paragraph{Hybrid arguments.}
