more about proofs

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -5,8 +5,8 @@ However, studying protocols such as Transport Layer Security (TLS~\cite{TLS13})
 and Messaging Layer Security (MLS~\cite{MLS}) \emph{as they are} 
 %(without simplifications and abstractions) 
 remains nevertheless difficult, since either
-standard consists of over 100 pages~\cite{X} which makes the protocols unwieldy for analysis without simplifications. Similarly, other real-life systems
-tend to combine multiple cryptographic components in complex dependencyíes,
+standard consists of over 100 pages which makes the protocols unwieldy for analysis without simplifications. Similarly, other real-life systems
+tend to combine multiple cryptographic components in complex dependencyies,
 see, e.g., remote attestation mechanisms~\cite{https://arxiv.org/pdf/2102.08804.pdf,https://en.wikipedia.org/wiki/Trusted_Computing}, ... or ... .
 
 The challenge when analyzing any of the aforementioned cases is three-fold:
@@ -61,6 +61,7 @@ SMT-solver.
 
 === stopped here, somehow, the flow broke ===
 
+{\color{gray} Not yet integrated into the flow
 
 
 
@@ -339,3 +340,4 @@ As an example, we use Yao's garbled circuits: much larger than what is known in 
 been done on EasyCrypt, so great test case.
 \fi
 \fi
+}
