--- a/paper/ssp.tex
+++ b/paper/ssp.tex
@@ -61,7 +61,7 @@ $\O{ENC}$ oracle of $\M{ENCRYPT}^b$.
 use different packages based on which value $b$ has?}
 
 \subsection{Proofs}
-standard pattern and how we use this for SSBee.
+standard pattern and how we use this for SSBee. Code equivalence proofs.
 
 \paragraph{SSBee.}
 
